# Typephoon_api

./: .dockerignore  .drone.yml  .example.env  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  setting.json  setting.secret.example.yaml  setting.yaml  test-requirements.txt
.github/workflows/: build-dev.yaml  release.yaml  test.yaml
doc/: build.md
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  service.yaml  statefulset.yaml
migration/: env.py
migration/versions/: 202412061814_init.py  202412071814_alter_nullable.py  202412090935_alter_users_add_refresh_token_column.py  202412221426_alter_table_game_and_user_change_column_.py  202412231738_alter_users_remove_user_type_column.py  202412261753_alter_game_and_game_result.py  2024_12_06_1814-2e896f63cdef_init.py  2e896f63cdef_init.py  71efd9951a2c_init.py  a98003368f20_alter_nullable.py
scripts/: generate_pk.sh  pg.sh
src/typephoon_api/: __main__.py
src/typephoon_api/api/: auth.py  game.py  health_check.py  healthcheck.py  lobby.py  profile.py
src/typephoon_api/consumers/: base.py  game.py  game_cleaner.py  game_start.py  keystroke.py  lobby_coundown.py  lobby_countdown.py  lobby_notify.py  lobby_notify_random.py
src/typephoon_api/lib/: amqp_manager.py  async_defaultdict.py  dependencies.py  server.py  server_setup.py  token_generator.py  token_validator.py  util.py  word_generator.py
src/typephoon_api/lib/background_tasks/: base.py  base_2.py  game.py  lobby.py  lobby_remove_callback.py
src/typephoon_api/lib/game/: base.py  game_background.py  game_manager.py
src/typephoon_api/lib/lobby/: base.py  lobby_background.py  lobby_background_random.py  lobby_manager.py  lobby_random_background.py
src/typephoon_api/lib/oauth_providers/: base.py  google.py
src/typephoon_api/models/: __init__.py  game.py  game_result.py  user.py
src/typephoon_api/oauth_providers/: google.py
src/typephoon_api/orm/: __init__.py  custom.py  game.py  game_result.py  user.py
src/typephoon_api/repositories/: game.py  game_cache.py  game_result.py  guest_token.py  lobby_cache.py  oauth_state.py  token.py  user.py
src/typephoon_api/schemas/: cli.py  enums.py
src/typephoon_api/schemas/entities/: game.py  user.py
src/typephoon_api/schemas/responses/: base.py
src/typephoon_api/services/: auth.py  base.py  game.py  game_event.py  game_evnet.py  health_check.py  lobby.py  lobby_countdown.py  lobby_random.py  profile.py  queue_in.py  token.py
src/typephoon_api/tests/: helper.py  test_api_healthcheck.py  test_service_auth.py
src/typephoon_api/tests/api/: test_api_auth.py  test_api_game.py  test_api_healthcheck.py  test_api_lobby.py  test_api_lobby_players.py  test_api_profile.py
src/typephoon_api/tests/lib/: test_base_bg.py  test_base_bg_tasks.py  test_game_bg.py  test_lobby_background.py  test_lobby_background_manager.py  test_lobby_bg.py  test_token_generator.py  test_token_validator.py
src/typephoon_api/tests/repos/: test_game_cache.py  test_game_repo.py  test_guest_token_repo.py  test_lobby_cache.py  test_oauth_state_repo.py  test_repo_user.py  test_token_repo.py  test_user_repo.py
src/typephoon_api/tests/services/: test_service_auth.py  test_service_game_event.py  test_service_lobby.py  test_service_queue_in.py
src/typephoon_api/types/: amqp.py  cli.py  common.py  enums.py  envs.py  errors.py  jwt.py  log.py  setting.py
src/typephoon_api/types/db/: game_result.py  user.py
src/typephoon_api/types/db_entities/: user.py
src/typephoon_api/types/requests/: game.py
src/typephoon_api/types/responses/: base.py  game.py  lobby.py  profile.py
src/typephoon_api/types/services/: auth.py  base.py
