[tool.poetry]
name = "typephoon_api"
version = "0.1.0"
description = ""
authors = ["AlexFangSW <alexfangsw@gmail.com>"]
readme = "README.md"
packages = [{include = "typephoon_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
alembic = "1.14.*"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
aiohttp = "^3.11.10"
uvicorn = "^0.32.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "test-requirements.txt"
with = ["test"]

[[tool.poetry-auto-export.exports]]
output = "requirements.txt"
