[project]
name = "typephoon-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika==9.5.4 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiohappyeyeballs==2.4.4 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiohttp==3.11.11 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiormq==6.8.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiosignal==1.3.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "alembic==1.14.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "annotated-types==0.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "anyio==4.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "async-lru==2.0.4 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "asyncpg==0.30.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "attrs==24.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "certifi==2024.12.14 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "cffi==1.17.1 ; python_full_version >= '3.13' and python_full_version < '4.0' and platform_python_implementation != 'PyPy'",
    "click==8.1.7 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.13' and python_full_version < '4.0' and sys_platform == 'win32'",
    "cryptography==44.0.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "exceptiongroup==1.2.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "fastapi==0.115.6 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "frozenlist==1.5.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "greenlet==3.1.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "h11==0.14.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "httpcore==1.0.7 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "httpx==0.28.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "mako==1.3.8 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "markupsafe==3.0.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "multidict==6.1.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pamqp==3.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "propcache==0.2.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "psycopg2-binary==2.9.10 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pycparser==2.22 ; python_full_version >= '3.13' and python_full_version < '4.0' and platform_python_implementation != 'PyPy'",
    "pydantic==2.10.4 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic-core==2.27.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pyjwt==2.10.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pyyaml==6.0.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "redis==5.2.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "sniffio==1.3.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "sqlalchemy==2.0.36 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "starlette==0.41.3 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "uvicorn==0.32.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "websockets==14.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "yarl==1.18.3 ; python_full_version >= '3.13' and python_full_version < '4.0'",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "time-machine>=2.16.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"

[project.scripts]
typephoon-api = "typephoon_api.__main__:main"

[tool.uv]
package = true
